Bug 509309 - Nightly Konsole warns about bash running when you close a tab using its close button
Summary: Nightly Konsole warns about bash running when you close a tab using its close...
Status: RESOLVED FIXED
Alias: None
Product: konsole
Classification: Applications
Component: general (other bugs)
Version First Reported In: master
Platform: Flatpak Linux
: NOR minor
Target Milestone: ---
Assignee: Konsole Bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2025-09-09 14:20 UTC by Nate Graham
Modified: 2025-09-10 14:07 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Nate Graham 2025-09-09 14:20:01 UTC
STEPS TO REPRODUCE
1. Install Konsole from nightly repo (https://cdn.kde.org/flatpak/konsole-nightly/org.kde.konsole.flatpakref)
2. Launch it with `flatpak run org.kde.konsole`
3. Ctrl+Shift+T to open a new tab
4. Click on the new tab's close button


OBSERVED RESULT
A warning dialog pops up saying "The program 'bash' is currently running in this session.  Are you sure you want to close it?".


EXPECTED RESULT
Tab closes immediately.


SOFTWARE/OS VERSIONS
Operating System: KDE Linux 2025-09-03
KDE Plasma Version: 6.4.80
KDE Frameworks Version: 6.18.0
Qt Version: 6.9.2
Kernel Version: 6.16.4-arch1-1 (64-bit)
Graphics Platform: Wayland
Processors: 16 × AMD Ryzen 7 7840U w/ Radeon™ 780M Graphics
Memory: 16 GiB of RAM (14.9 GiB usable)
Graphics Processor: AMD Radeon 780M Graphics


ADDITIONAL INFORMATION
Technically it's true that bash is running, but this is not exactly cause for alarm. :) 

This isn't an issue in the non-Flatpak-packaged version of Konsole.
Comment 1 Waqar Ahmed 2025-09-10 14:07:05 UTC
Git commit 6d43440ca6967821f79a66010418e3d9b29aa643 by Waqar Ahmed.
Committed on 10/09/2025 at 08:53.
Pushed by waqar into branch 'master'.

Fix processId() for flatpak

processId() was returning the pid of flatpak-spawn, while we want the
shell process id.

M  +49   -0    src/Pty.cpp
M  +12   -8    src/Pty.h
M  +5    -25   src/session/Session.cpp
M  +10   -7    src/session/SessionController.cpp

https://invent.kde.org/utilities/konsole/-/commit/6d43440ca6967821f79a66010418e3d9b29aa643