Fix processId() for flatpak

processId() was returning the pid of flatpak-spawn, while we want the
shell process id.

BUG: 509309